hello-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-nginx
  namespace: play
  labels:
    app: hello-nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.25-alpine
      ports:
        - containerPort: 80
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 3
        periodSeconds: 5
