svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
  namespace: app
spec:
  type: ClusterIP
  selector: { app: echo }
  ports:
    - name: http
      port: 80
      targetPort: 80
